--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,9 @@ inputs:
   target-token:
     description: 'Target Token'
     required: true
+  target-email:
+    description: 'Target User Email'
+    required: true
 runs:
   using: "composite"
   steps:
@@ -25,3 +28,4 @@ runs:
         INPUT_TARGET_USERNAME: ${{ inputs.target-username }}
         INPUT_TARGET_TOKEN: ${{ inputs.target-token }}
         GITHUB_EVENT_REF: ${{ github.event.ref }}
+        INPUT_USER_EMAIL: ${{ inputs.target-email }}
