--- a/action.yml
+++ b/action.yml
@@ -28,4 +28,4 @@ runs:
         INPUT_TARGET_USERNAME: ${{ inputs.target-username }}
         INPUT_TARGET_TOKEN: ${{ inputs.target-token }}
         GITHUB_EVENT_REF: ${{ github.event.ref }}
-        INPUT_USER_EMAIL: ${{ inputs.target-email }}
+        INPUT_TARGET_USEREMAIL: ${{ inputs.target-email }}
