--- a/action.yml
+++ b/action.yml
@@ -6,17 +6,23 @@ branding:
   color: gray-dark
 
 inputs:
-  target-url:
+  git-target-url:
     description: 'Target Repo URL'
     required: true
-  target-username:
+  git-target-username:
     description: 'Target Repo Username'
     required: true
-  target-token:
+  git-target-token:
     description: 'Target Token'
     required: true
-  target-useremail:
+  git-target-useremail:
     description: 'Target User Email'
+    required: true
+  git-target-dir:
+    description: 'Target directory'
+    required: true
+  git-source-dir:
+    description: 'Source directory'
     required: true
 runs:
   using: "composite"
@@ -24,8 +30,10 @@ runs:
     - run: ${{ github.action_path }}/entrypoint.sh
       shell: bash
       env:
-        INPUT_TARGET_URL: ${{ inputs.target-url }}
-        INPUT_TARGET_USERNAME: ${{ inputs.target-username }}
-        INPUT_TARGET_TOKEN: ${{ inputs.target-token }}
+        INPUT_TARGET_URL: ${{ inputs.git-target-url }}
+        INPUT_TARGET_USERNAME: ${{ inputs.git-target-username }}
+        INPUT_TARGET_TOKEN: ${{ inputs.git-target-token }}
         GITHUB_EVENT_REF: ${{ github.event.ref }}
-        INPUT_TARGET_USEREMAIL: ${{ inputs.target-useremail }}
+        INPUT_TARGET_USEREMAIL: ${{ inputs.git-target-useremail }}
+        INPUT_TARGET_DIR: ${{ inputs.git-target-dir }}
+        INPUT_SOURCE_DIR: ${{ inputs.git-source-dir }}
